cluster/lab/messaging/ingressroute-tcp.yaml
# AMQP on the "amqp" entrypoint traefik.yaml opens on :5672. Laptops connect
# to amqp://<user>:<pass>@192.168.18.80:5672/ ; in-cluster apps use
# rabbitmq.messaging.svc.cluster.local:5672.
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: amqp
  namespace: messaging
spec:
  entryPoints: [amqp]
  routes:
    - match: HostSNI(`*`)
      services:
        - name: rabbitmq
          port: 5672
